# tinybook

./: .pylintrc  .readthedocs.yaml  LICENSE  README.md  README.rst  index.html  pyproject.toml
.github/workflows/: lint-test-cover-docs.yml
docs/: Makefile  conf.py  index.rst  toc.rst
docs/_source/: tinybook.rst
docs/_templates/: module.rst_t  package.rst_t  toc.rst_t
src/tinybook/: __init__.py  tinybook.py
